<resources>
    <string name="app_name">Doodle</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_password"><u>Find Password</u></string>
    <string name="login_id_hint">Put your email address</string>
    <string name="login_hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_login_facebook">FaceBook Login</string>
    <string name="login_sigup_text">Is it your first time?</string>
    <string name="login_signup_link"><u>Let`s join us!</u></string>
    <string name="find_password_email">Put your email address</string>
    <string name="btn_find_password_cancel">Cancel</string>
    <string name="btn_find_password_send">Send Key</string>
    <string name="edit_find_password_key">Put the confirm key</string>
    <string name="btn_confrim_key_cancel">Cancel</string>
    <string name="btn_change_password">Change pass</string>
    <string name="edit_change_password1">Put new password</string>
    <string name="edit_new_password2">Put the password again</string>
    <string name="btn_new_password_cancel">Cancel</string>
    <string name="btn_new_password_ok">Done</string>
    <string name="terms_requirement"><u>Requierment</u></string>
    <string name="service_terms_agreement">Service terms agreement</string>
    <string name="personal_info_terms">Personal Info Terms</string>
    <string name="btn_signup_cancel">Cancel</string>
    <string name="btn_signup_next">Next</string>
    <string name="edit_nick_hint">Nick name what you want</string>
    <string name="btn_profile_cancel">Cancel</string>
    <string name="btn_profile_next">Next</string>
    <string name="btn_filter_cancel">Cancel</string>
    <string name="btn_filter_ok">Done</string>
    <string name="tab_bookshelf_indicator">Bookshelf</string>
    <string name="tab_scribble_indicator">Scribble</string>
    <string name="tab_searchingRecomm_indicator">Searching/Recomm</string>
    <string name="book_reading">Reading</string>
    <string name="book_done">Done</string>
    <string name="book_will">Will</string>
    <string name="retainedBook_comment">books you have</string>
    <string name="text_month">January</string>
    <string name="edit_searching">Put a searching keyword</string>
    <string name="scribble_page_hint">page</string>
    <string name="btn_bookshelf_done">Done</string>
    <string name="btn_bookshelf_reading">Reading</string>
    <string name="btn_bookshelf_will">Will</string>
    <string name="text_menu_info">Information</string>
    <string name="text_menu_account">Account</string>
    <string name="text_menu_change_password">Change Password</string>
    <string name="text_menu_logout">Logout</string>
    <string name="text_menu_filter">Filter</string>
    <string name="text_menu_filter_setting">Filter Setting</string>
    <string name="text_menu_alarm_setting">Alarm Setting</string>
    <string name="text_menu_alarm">Alarm</string>
    <string name="text_menu_service"><![CDATA[Service & Question]]></string>
    <string name="text_menu_notice">Notice</string>
    <string name="terms_hint_email">Email</string>
    <string name="terms_hint_password1">Password</string>
    <string name="terms_hint_password2">Password again</string>
    <string name="text_service_terms">It is not prepared in English.</string>
    <string name="text_personal_terms">It is not prepared in English.</string>
    <string name="text_actionbar_signup">Personal Info</string>
    <string name="text_toolbar_signup"><![CDATA[Email & Terms]]></string>
    <string name="text_toolbar_profile">Profile</string>
    <string name="text_toolbar_filter">Filter</string>
    <string name="text_toolbar_find_password">Find Password</string>
    <string name="text_scribble_modify">Modify</string>
    <string name="text_scribble_delete">Delete</string>
    <string name="scribble_content_hint">content</string>
    <string name="filter_1reference_book">Reference Book</string>
    <string name="filter_2kid_book">Kid Book</string>
    <string name="filter_3economy_book">Economy</string>
    <string name="filter_4social_science_book">Social Science</string>
    <string name="filter_5history_book">History</string>
    <string name="filter_6art_book">Art</string>
    <string name="filter_7science_book">Science</string>
    <string name="filter_8family_book">Family/Hobby</string>
    <string name="filter_9self_develop_book">Self Develop</string>
    <string name="filter_10computer_book">Computer/Internet</string>
    <string name="filter_11comic_book">Comic</string>
    <string name="filter_12humanity_book">Humanity</string>
    <string name="filter_13novel_book">Novel</string>
    <string name="filter_14essay_book">Essay</string>
    <string name="text_filter_dialog_head">Filter Setting</string>
    <string name="btn_filter_dialog">OK</string>
    <string name="text_book_detail_info_title">Book Title: </string>
    <string name="text_book_detail_author">Author:</string>
    <string name="text_book_detail_publisher">Publisher:</string>
    <string name="text_book_detail_category">Category:</string>
    <string name="btn_add_book">Add Book</string>
    <string name="btn_page_dialog">OK</string>
    <string name="facebook_app_id">792738897525674</string>
    <string name="msg_add_book">Please add books</string>


</resources>
