<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.joo.scribblesonthebook.find_password.FindPasswordEmailFragment"
    android:orientation="vertical">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_find_password_email"
        android:hint="@string/find_password_email" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_find_password_cancel"
            android:id="@+id/btn_find_password_cancel"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_find_password_send"
            android:id="@+id/btn_find_password_key_send"
            android:layout_gravity="bottom"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
