<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.joo.scribblesonthebook.find_password.ChangePasswordFragment"
    android:orientation="vertical">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/edit_change_pwd_margin_left"
        android:layout_marginRight="@dimen/edit_change_pwd_margin_right">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_change_pwd_height"
            android:id="@+id/edit_setting_new_password1"
            android:inputType="textPassword"
            android:hint="@string/edit_change_password1"
            android:textSize="@dimen/text_change_pwd_size"
            android:layout_marginTop="@dimen/edit_change_pwd_margin_top" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_change_password_height"
            android:id="@+id/edit_setting_new_password2"
            android:inputType="textPassword"
            android:hint="@string/edit_new_password2"
            android:textSize="@dimen/text_change_pwd_size" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:background="#110e34"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_menu_change_pwd_cancel"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/btn_new_password_cancel"
            android:background="#110e34"
            android:textColor="#ffffff"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_menu_change_pwd_ok"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/btn_new_password_ok"
            android:background="#110e34"
            android:textColor="#767676" />
    </LinearLayout>
</LinearLayout>
