<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.joo.scribblesonthebook.find_password.ChangePasswordFragment"
    android:orientation="vertical">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/edit_change_password_padding_top"
        android:paddingLeft="@dimen/edit_change_password_padding_left"
        android:paddingRight="@dimen/edit_change_password_padding_right">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_change_password_height"
            android:id="@+id/edit_new_password1"
            android:inputType="textPassword"
            android:hint="@string/edit_change_password1"
            android:textColor="#110e34"
            android:textSize="@dimen/edit_change_password_size" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_change_password_height"
            android:id="@+id/edit_new_password2"
            android:inputType="textPassword"
            android:hint="@string/edit_new_password2"
            android:textSize="@dimen/edit_change_password_size"
            android:textColor="#110e34" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#110e34">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_change_pwd_cancel"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/btn_new_password_cancel"
            android:background="#110e34"
            android:textColor="#ffffff" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_change_pwd_ok"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/btn_new_password_ok"
            android:background="#110e34"
            android:textColor="#767676" />
    </LinearLayout>
</LinearLayout>
