<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FindPassword2Activity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_confirm_key"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/edit_find_password_key"
        android:layout_marginLeft="@dimen/find_password_edit_margin"
        android:layout_marginTop="@dimen/find_password_edit_margin"
        android:layout_marginRight="@dimen/find_password_edit_margin" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/edit_confirm_key"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_confrim_key_cancel"
            android:id="@+id/btn_confrimkey_cancel"
            android:layout_gravity="bottom"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_change_password"
            android:id="@+id/btn_change_password"
            android:layout_gravity="bottom"
            android:layout_weight="1" />

    </LinearLayout>

</RelativeLayout>
