<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.joo.scribblesonthebook.find_password.FindPasswordKeyFragment"
    android:orientation="vertical">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/find_password_key_height"
        android:id="@+id/edit_confirm_key"
        android:hint="@string/edit_find_password_key"
        android:layout_marginLeft="@dimen/find_password_key_margin_left"
        android:layout_marginRight="@dimen/find_password_key_margin_right"
        android:textSize="@dimen/find_password_key_size"
        android:textColor="#110e34"
        android:layout_marginTop="@dimen/find_password_key_margin_top" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:background="#110e34"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_confrim_key_cancel"
            android:id="@+id/btn_confirm_key_cancel"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="#110e34"
            android:textColor="#ffffff"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_change_password"
            android:id="@+id/btn_change_password"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="#110e34"
            android:textColor="#767676"
            />
    </LinearLayout>
</LinearLayout>
